<resources>
    <string name="app_name">Survey</string>
    <string name="message_hint">Please enter the code</string>
    <string name="button_start">START</string>
    <string name="button_next">NEXT</string>
    <string name="choose_nationality">1. Choose your nationality:</string>
    <string name="choose_age_range">2. Choose your age range:</string>
    <string name="wrong_code_error">WRONG CODE</string>
    <string name="age_range_1">Under 18</string>
    <string name="age_range_2">18 - 30</string>
    <string name="age_range_3">31 - 50</string>
    <string name="age_range_4">51 - 65</string>
    <string name="age_range_5">Above 65</string>
    <string name="purpose_of_travel">3. Choose the purpose(s) of your most recent travel:</string>
    <string name="rating">4. How would you rate your most recent travel:</string>
    <string name="checkbox_1">Business</string>
    <string name="checkbox_2">Relaxation</string>
    <string name="checkbox_3">Medical Reasons</string>
    <string name="checkbox_4">Family Reunification</string>
    <string name="checkbox_5">Others</string>
    <string name="summary">Summary</string>
    <string name="selected_country">Country:</string>
    <string name="selected_age_range">Age Range:</string>
    <string name="selected_travel_purposes">Most Recent Travel Purposes:</string>
    <string name="selected_travel_rating">Most Recent Travel Rating:</string>
    <string name="button_submit">SUBMIT</string>

</resources>