<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:text="@string/choose_age_range"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:layout_marginTop="92dp"
        android:text="@string/choose_nationality"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:checkedButton="@id/selection1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <RadioButton
            android:id="@+id/selection1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_range_1" />
        <RadioButton
            android:id="@+id/selection2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_range_2" />
        <RadioButton
            android:id="@+id/selection3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_range_3" />
        <RadioButton
            android:id="@+id/selection4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_range_4" />
        <RadioButton
            android:id="@+id/selection5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_range_5" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>